5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1764_1583.log
== TEST (2019-05-30 09:45:31) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 1
	
print(v)
-- OUTPUT:
123123123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:46:00) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 1
	
print(v)
-- EXECUTION TIME:
0.132
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123123123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.234.345.456.567.678.789.890.900.000.009.098.987.876.765.654.543.432.123456789000987654321123456789000987654321123456789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.876.765.654.543.432.987654321987654321987654321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:46:27) 
-- CODE:
x = input("")

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 1
	
print(v)
-- OUTPUT:
123123123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:46:32) 
-- CODE:
x = input("")

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 1
	
print(v)
-- OUTPUT:
123123123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:47:45) 
-- CODE:
s = input("")

i = 0
v = ""
while len(s) > i:
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
			
	h += 3
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    h += 3
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:47:53) 
-- CODE:
s = input("")

i = 0
v = ""
while len(s) > i:
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
			
	i += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:48:13) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:48:22) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) . h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 3
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while len(x) . h:
AttributeError: 'int' object has no attribute 'h'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:48:25) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) > h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:48:55) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) > h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:49:42) 
-- CODE:
x = input("")

h = 0
v = ""
while len(x) != h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += x
			
	h += 1
	
print(v)
-- OUTPUT:
123123123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:50:25) 
-- CODE:
s = input()

i = 0
v = ""
while len(s) != h:
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
			
	i += 1
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while len(s) != h:
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:50:36) 
-- CODE:
s = input()

i = 0
v = ""
while len(s) > i:
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
			
	i += 1
	
print(v)
-- OUTPUT:
123233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:50:49) 
-- CODE:
s = input()

i = 0
v = ""
while len(s) > i:
	if len(s) % 3 == 0 and len(s) >= 3:
		x = s[i:i+3]
		
		if i < len(s) - 3:
			v += x + "."
		else:
			v += x
			
	i += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:51:34) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) > i:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += y
			
	h += 3
	
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while len(x) > i:
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:51:41) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) > h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += y
			
	h += 3
	
print(v)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:51:46) 
-- CODE:
x = input()

h = 0
v = ""
while len(x) > h:
	if len(x) % 3 == 0 and len(x) >= 3:
		y = x[h:h+3]
		
		if h < len(x) - 3:
			v += y + "."
		else:
			v += y
			
	h += 3
	
print(v)
-- EXECUTION TIME:
0.210148
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
